vault-personal/manifests/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      securityContext:
        fsGroup: 1005
      containers:
        - name: vault
          image: hashicorp/vault:1.16
          ports:
            - containerPort: 8200
          securityContext:
            capabilities:
              add: ["IPC_LOCK"]
          volumeMounts:
            - name: vault-data
              mountPath: /vault/data
      volumes:
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault-data
        - name: backup
          hostPath:
            path: /data/PVC/vault
            type: Directory
