vault-personal/manifests/03-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  serviceName: vault
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      securityContext:
        fsGroup: 1005
      containers:
      - name: vault
        image: hashicorp/vault:1.20
        ports:
          - containerPort: 8200
            name: vault-port
        volumeMounts:
          - name: vault-data
            mountPath: /vault/data
          - name: vault-config
            mountPath: /vault/config
            readOnly: false
        securityContext:
          runAsUser: 1005
          runAsGroup: 1005
          allowPrivilegeEscalation: false
          capabilities:
            add:
              - SETFCAP

      volumes:
      - name: vault-backup
        hostPath:
          path: /PVC/vault
          type: Directory
      - name: vault-config-ro
        configMap:
          name: vault-config
      - name: vault-config
        emptyDir: {}
      - name: vault-data
        persistentVolumeClaim:
          claimName: vault-data-pvc
